# llvm-course

./: .clang-format  README.md
llvm_passes/: CMakeLists.txt  build.sh  run_analysis.sh  run_transform.sh  run_transform2.sh
llvm_passes/examples/: foo.ll  foo2.ll  foo3.ll
llvm_passes/include/: AddConst.h
llvm_passes/lib/: AddConstAnalysis.cc  AddConstPass.cc  AddConstPlugin.cc  CMakeLists.txt
llvm_passes/tool/: CMakeLists.txt  Main.cc
